<resources>
    <string name="app_name">Akhirbulanku</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_peminjaman">Form Peminjaman</string>
    <string name="title_activity_dashboard">Dashboard Transaksi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Akhirbulanku</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contentDescriptionLogo">Logo</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_register">Register</string>
    <string name="text_login">Already registered ? Login here</string>
    <string name="item_logout">Logout</string>
    <string name="button_login">LOGIN</string>
    <string name="text_register">Doesn\'t have an account ? Register here</string>
    <string name="item_about">About</string>
    <string name="item_misc">Misc</string>
    <string name="item_home">Home</string>
    <string name="item_dashboard">Dashboard</string>
    <string name="dashboard_transaksi">Dashboard Transaksi</string>
    <string name="test_dashboard">Halo, Wian</string>
    <string name="kode_transaksi">#9966F106</string>
    <string name="nama_debitur">Wiandono Saputro</string>
    <string name="jaminan">KTP</string>
    <string name="label_nama">Nama</string>
    <string name="label_jaminan">Jaminan</string>
    <string name="tanggal_jatuh_tempo">06 May 2018</string>
    <string name="label_jatuh_tempo">Jatuh Tempo</string>
    <string name="label_besar_pinjaman">Besar Pinjaman</string>
    <string name="besar_pinjaman">Rp. 150,000</string>
    <string name="label_bank">Bank</string>
    <string name="label_biaya_layanan">Biaya Layanan</string>
    <string name="label_biaya_transfer">Biaya Transfer</string>
    <string name="label_denda">Denda</string>
    <string name="denda">Rp. 0 (0 Hari)</string>
    <string name="label_total">Total</string>
    <string name="total">Rp. 209,500</string>
    <string name="button_batalkan_peminjaman">Batalkan Peminjaman</string>
    <string name="buttonPeminjaman">Ajukan Peminjaman</string>
    <string name="item_data_debitur">Nama Sesuai KTP</string>
    <string name="item_Alamat">Alamat</string>
    <string name="item_Kerabat">Nama Kerabat</string>
    <string name="item_NoHPKerabat">No. HP Kerabat</string>
    <string name="item_AlamatKerabat">Alamaat Kos Kerabat</string>
    <string name="item_Tujuan">Tujuan Peminjaman</string>
    <string name="item_NamaRekening">Nama Pemilik Rekening</string>
    <string name="item_Bank">Bank Tujuan</string>
    <string name="item_NoRekening">No. Rekening</string>
    <string name="item_Paket1">Paket 16 SKS - Rp. 150.000</string>
    <string name="item_Paket2">Paket 20 SKS - Rp. 300.000</string>
    <string name="item_Paket3">Paket 24 SKS - Rp. 500.000</string>
    <string name="home_section_1">Uang Bulanan Kamu Habis?</string>
    <string name="home_section_1_desc">Akhirbulanku.com adalah bisnis financial technology yang bergerak dalam bidang pinjam dan meminjam dana jangka pendek khusus untuk mahasiswa berstatus aktif pada strata pendidikan Sarjana 1 Universitas Brawijaya</string>
    <string name="cd_home_header">Home Header</string>
    <string name="cd_home_logo">Home Logo</string>
    <string name="cd_home_steps">Home Steps</string>
    <string name="cd_home_paket">Home Paket</string>
    <string name="about_title">Hello ?</string>
    <string name="about_desc_1">Pengen nanya-nanya lebih detail ? Yuk, kamu bisa langsung menghubungi Akhirbulanku melalui contact dibawah ini</string>
    <string name="about_company">Akhirbulanku</string>
    <string name="about_desc_2">Jl. Ikan Teri No.1 Kelurahan Tunjungsekar, Malang, Jawa Timur</string>
    <string name="about_desc_3">(0813) 1344-1517</string>
    <string name="about_desc_4">info@akhirbulanku.com</string>
    <string name="about_desc_5">Jam Operasional :</string>
    <string name="about_desc_6">Senin - Jumat</string>
    <string name="about_desc_7">08:00 - 19:00</string>
    <string name="about_thank_you">Thank you!</string>
    <string name="about_credit_desc">Wiandono Saputro - 155150201111111\nFaishal Pradipta - 155150207111187\nAbidin Adi Prasetyo - 155150201111067\nChrysler Imanuel - 155150200111293\nRadifan Aji Karami - 155150207111032</string>
    <string name="title_pengajuan">Form Pengajuan Peminjaman</string>
    <string name="label_paket">Paket Peminjaman</string>
    <string name="bank">0061234567890 (Mandiri)</string>
    <string name="biaya_layanan">Rp. 25,000</string>
    <string name="biaya_transfer">Rp. 7,500</string>
    <string name="button_ajukan_peminjaman">Ajukan Peminjaman</string>
    <string name="dashboard_belum_transaksi">Belum memiliki transaksi</string>
    <string name="rupiah">Rp. </string>
    <string name="button_batalkan">Batalkan Transaksi</string>
</resources>
