<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/item_home" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/item_dashboard" />
    </group>

    <item android:title="@string/item_misc">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/item_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/item_logout" />
        </menu>
    </item>

</menu>
