<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:isScrollContainer="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutActivity"
    tools:showIn="@layout/app_bar_about">

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/about_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_desc_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_title"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/about_desc_1"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/about_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_desc_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/about_company"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_desc_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_company"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/about_desc_2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/about_desc_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_desc_2"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/about_desc_3" />

    <TextView
        android:id="@+id/about_desc_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_desc_3"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/about_desc_4" />

    <TextView
        android:id="@+id/about_desc_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_desc_4"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/about_desc_5" />

    <TextView
        android:id="@+id/about_desc_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_desc_5"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/about_desc_6" />

    <TextView
        android:id="@+id/about_desc_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_desc_6"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/about_desc_7" />

    <TextView
        android:id="@+id/about_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_desc_7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/about_thank_you"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_credit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/about_credit_desc"
        android:textAlignment="center" />

</RelativeLayout>