<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/contentDescriptionLogo"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/editTextEmail_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/blue_cursor"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/editTextPassword_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/blue_cursor" />

        <Button
            android:id="@+id/buttonSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/orange"
            android:text="@string/button_login"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:textAlignment="center" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
